[gd_scene load_steps=9 format=3 uid="uid://d1jvsfypljqq7"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_wuxxj"]
[ext_resource type="VideoStream" path="res://Vid/ezgif-3-4f4b13763d.ogv" id="2_snjfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhiyw"]

[sub_resource type="Theme" id="Theme_4ipr2"]
Button/colors/font_color = Color(0.439216, 0.921569, 1, 1)
Button/colors/font_hover_color = Color(0.947295, 0.493363, 1, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/focus = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/hover = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/normal = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/pressed = SubResource("StyleBoxEmpty_rhiyw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nu1su"]

[sub_resource type="Theme" id="Theme_2n0sv"]
Button/colors/font_color = Color(0.439216, 0.921569, 1, 1)
Button/colors/font_hover_color = Color(0.94902, 0.494118, 1, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_nu1su")
Button/styles/focus = SubResource("StyleBoxEmpty_nu1su")
Button/styles/hover = SubResource("StyleBoxEmpty_nu1su")
Button/styles/normal = SubResource("StyleBoxEmpty_nu1su")
Button/styles/pressed = SubResource("StyleBoxEmpty_nu1su")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_17dpp"]

[sub_resource type="Theme" id="Theme_0rxg7"]
Button/colors/font_color = Color(0.631373, 0.631373, 0.631373, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_17dpp")
Button/styles/focus = SubResource("StyleBoxEmpty_17dpp")
Button/styles/hover = SubResource("StyleBoxEmpty_17dpp")
Button/styles/normal = SubResource("StyleBoxEmpty_17dpp")
Button/styles/pressed = SubResource("StyleBoxEmpty_17dpp")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuxxj")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_snjfk")
autoplay = true
loop = true

[node name="1p" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 273.0
offset_right = 675.0
offset_bottom = 341.0
theme = SubResource("Theme_4ipr2")
theme_override_font_sizes/font_size = 50
text = "1 Player"

[node name="2p" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 346.0
offset_right = 689.0
offset_bottom = 414.0
theme = SubResource("Theme_2n0sv")
theme_override_font_sizes/font_size = 50
text = "2 Player"

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 414.0
offset_right = 688.0
offset_bottom = 482.0
theme = SubResource("Theme_2n0sv")
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 482.0
offset_right = 596.0
offset_bottom = 550.0
theme = SubResource("Theme_0rxg7")
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="logo" type="Label" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 105.0
offset_right = 794.0
offset_bottom = 233.0
theme_override_font_sizes/font_size = 93
text = "QuizRush"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="1p" to="." method="_on_p_pressed"]
[connection signal="pressed" from="2p" to="." method="_on_2p_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
